style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;0,900;1,100;1,200&display=swap');

:root {
    --theme: #e43a47;
    --gray : #efefef;
}

body, button {font-family: 'Poppins', sans-serif}

* {padding: 0;
margin: 0;
box-sizing: border-box;}

html{scroll-behavior: smooth;}

p {
    font-size: 14px;
    line-height: 26px;
}

.SectionTitle {
    width: 300px;
    text-align: center;
    border-bottom: 3px solid var(--theme);
    font-size: 2rem;
    font-weight: 200;
    margin: 0 auto 50px;
    position: relative;
    padding: 10px 0;
    text-transform: uppercase;
}
.SectionTitle::after{
    display: inline-block;
    content: "";
    height: 15px;
    width: 15px;
    background-color: var(--theme);
    position: absolute;
    left: calc(50% - 10px);
    right: calc(75% - 7px);
    transform: rotate(45deg) translate(175%, 175%);
    border: 3px solid #fff;
}

section{
    padding: 100px 0;
    position: relative;
}

.fullContainer{
    width: 100%;
}
.container {
    margin: auto;
    width: 1140px;
}

header {width: 100%;
background-color: rgba(0, 0, 0, 0.6);
position: fixed;
z-index: 2;}

header .container 
{display: flex;
justify-content: space-between;}

header .container .logo {
    padding: 15px 0;
    height: 75px;
}

header .container .logo img {
    height: 100%;
}

header nav ul {
    list-style-type: none;
}
header nav ul li{
    display: inline-block;
}

header nav ul li a {
    display: inline-block;
    height: 75px;
    line-height: 75px;
    padding: 0 15px;
    text-decoration: none;
    text-transform: capitalize;
    font-size: 16px;
    color: #fff;
    transition: 0.3s;
}

header nav ul li a:hover{
    background-color:var(--theme)
}

.banner {
 min-height: 100vh;
    width: 100%;
    background-image: url(Media/SunsetFarm.jpg);
    background-size: cover;
    background-attachment: fixed;

}

.banner h1 {
    margin-top: 230px;
    display: inline-block;
    font-size: 3.5rem;
    color: #fff;
    text-shadow: 1px 1px, 1px 1px rgba(255, 255, 255, 0.8);
    width: 50%;
    font-weight: 400;
}
.banner h1 span {
    background-color: var(--theme);
    display: inline-block;
    line-height: 3.5rem;
    padding: 10px 15px 15px 15px;
    font-weight: 600px;
    border-radius: 5px;
}

.banner p {
    color: #fff;
    width: 50%;
    text-shadow: 0 0 2px #000;
    margin-top: 10px;
}

.banner button {
    background-color: var(--theme);
    color: #fff;
    border: 0;
    outline: none;
    padding: 10px 15px;
    margin-top: 20px;
    font-size: 13px;
    border-radius: 3px;
    font-weight: 400;
}

.banner button a {
    text-decoration: none;
    transition: 0.3s;
    color: #fff;
}

.submitButton{
    padding: 10px;
    font-size: 1em;
    background-color: var(--theme);
    outline: none;
    border: 0;
    color:#fff;
    margin-top: 10px;
    width: 100%;
    border-radius: 4px;
}
.submitButton:hover{
    color: #424242;
    cursor:pointer;
}

.modal{
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.4);
    justify-content: center;
    align-items: center;  
}

.modalContent{
    background-color: #fff;
    padding: 20px;
    border-radius: 8px;
    width: 300px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.closeButton{
    position: absolute;
    top: -5px;
    right: 5px;
    font-size: 1.5rem;
    cursor: pointer;
}

#confirmationMessage{
    margin-top: 20px;
    font-size: 1.2rem;
}
.donationFormContainer h1{
    margin-bottom: 20px;
}
.donationFormContainer label{
    display: block;
    margin-bottom: 5px;
}
.donationFormContainer input{
    width: 100%;
    padding: 8px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

#AbtUsSection .cards{
display: flex;
flex-wrap: wrap;
justify-content: space-between;
margin-top: 50px;
position: relative;
height: 245px;
}

#AbtUsSection .cards > div {
    width: 350px;
    background-color: var(--gray);
    padding: 35px;
    color: #444;
    text-align: center;
    border-radius: 15px;
    height: 215px;
    border: 1px solid #ccc;
    transition: 0.3s;
}  

#AbtUsSection .cards > div:hover{
    width: 400px;
    margin-top: -20px;
    border-color: var(--theme);
    padding: 55px;
    height: auto;
}

#AbtUsSection .cards > div .title{
    font-size: 18px;
    text-transform: uppercase;
    font-weight: 600;
}

#AbtUsSection .cards > div p
{font-size: 14px;
margin-top: 15px;}

#AbtUsSection .cards > div button a {
    text-decoration: none;
    transition: 0.3s;
    color: #444;
}

#AbtUsSection .cards > div button{
    border: 1px solid var(--theme);
    outline: none;
    padding: 7px 15px;
    margin-top: 15px;
    font-size: 12px;
    border-radius: 3%;
    cursor: pointer;
    transition: 0.3s;
}
#AbtUsSection .cards > div:hover button {
    background-color: var(--theme);
    color: #fff;   
}

.OurWork {
    background-color: #e2e2e2;
}

.OurWork .boxContainer {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap:50px;
}
.OurWork .boxContainer .Box{
    background-color: #fff;
    text-align: center;
    padding-bottom: 25px;
    border-radius: 5px;
    box-shadow: 0 0 3px 0 #c5c5c5;
    position: relative;
    margin-bottom: 15px;
}

.OurWork .boxContainer .Box .ImageCard {
    width: 100%;
    height: 300px;
    background-position: center;
    background-size: cover;
    position: relative;
    overflow: hidden;
    border-radius: 5px 5px 0 0;
}
.OurWork .boxContainer .Box .ImageCard:after{
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: cover;
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    filter: grayscale(100%);
    transition: 0.4s;
}
/* ... */

